--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<sonar.version>3.4.0.905</sonar.version>
 		<jacoco.version>0.8.0</jacoco.version>
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
+		<mockito.version>2.15.0</mockito.version>
+		<log4j.version>2.10.0</log4j.version>
 	</properties>
 
 	<build>
@@ -140,6 +142,29 @@
 			<version>${junit.platform.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 
